Fix big numbers text overflow

--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -579,6 +579,8 @@ figure .big-number {
   font: bold 128px/1em Poppins, sans-serif;
   font: bold 8rem/1em Poppins, sans-serif;
   color: #62718b;
+  overflow-wrap: break-word;
+  word-break: break-all;
 }
 
 figure .medium-number {
@@ -586,6 +588,8 @@ figure .medium-number {
   font: bold 64px/1em Poppins, sans-serif;
   font: bold 4rem/1em Poppins, sans-serif;
   color: #62718b;
+  overflow-wrap: break-word;
+  word-break: break-all;
 }
 
 figure .really-big-number {
